--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -11,711 +11,12 @@
 
 \include{commands}
 
-\whitecard{Basis}{In Flammen \newline stehen.}%
-\whitecard{Basis}{Rassismus.}%
-\whitecard{Basis}{Der Geruch alter Leute.}
-
-\whitecard{Basis}{Rassismus.}%
-\whitecard{FSK16}{Ein Mikropenis.}%
-\whitecard{Basis}{Frauen in Joghurt-Werbespots.}
-
-\whitecard{Böse}{Sich einen Dreck um die dritte Welt zu scheren.}%
-\whitecard{FSK18}{Sich ein Einweckglas in den Anus einführen.}%
-\whitecard{Basis}{Gerichtlich\newline angeordneter \newline Entzug.}
-
-\whitecard{Böse}{Eine Windmühle voller Leichen.}%
-\whitecard{Basis}{Ein übergroßer Lolli.}%
-\whitecard{Basis}{Schwule.}
-
-\whitecard{Böse}{Afrikanische Kinder.}%
-\whitecard{Basis}{Eine\newline asymmetrische Brust-Vergößerung.}%
-\whitecard{Eklig}{Sich\newline überfressen und dann abführen.}
-
-\whitecard{Basis}{Der hart\newline arbeitende Türke.}%
-\whitecard{Basis}{Ödipuskomplex.}%
-\whitecard{Basis}{Ein kleines Pferd.}
-
-\whitecard{Basis}{Popel.}%
-\whitecard{Basis}{Penis-Neid.}%
-\whitecard{Basis}{Angela Merkel.}
-
-\whitecard{Basis}{Barack Obama.}%
-\whitecard{Basis}{Meine Warzen.}%
-\whitecard{Basis}{Das\newline schwedische\newline Tempur-Pedic\SymbReg \newline  Schlafsystem.}
-
-\whitecard{Basis}{Scientology.}%
-\whitecard{Basis}{Würgen.}%
-\whitecard{Basis}{Darth Vader.}
-
-\whitecard{Basis}{Feigenpudding.}%
-\whitecard{Basis}{Ein Ratschlag von einem weisen alten Mann.}%
-\whitecard{Basis}{5 Euro Subway Footlongs.}
-
-\whitecard{Basis}{Betagte\newline japanische\newline Männer.}%
-\whitecard{Basis}{Kostenlose Proben.}%
-\whitecard{Basis}{Östrogen.}
-
-\whitecard{FSK16}{Sexuelle\newline Spannungen.}%
-\whitecard{Böse}{Hungersnot.}%
-\whitecard{Basis}{Ein verirrtes Schamhaar.}
-
-\whitecard{Basis}{Männer.}%
-\whitecard{Basis}{Herz-\newline erweichende\newline Weisenkinder.}%
-\whitecard{Böse}{Teile eines toten Anhalters.}
-
-\whitecard{Basis}{Ein Sack voller magischer Bohnen.}%
-\whitecard{Basis}{Unterdrückung.}%
-\whitecard{Basis}{Tänzeln.}
-
-\whitecard{Basis}{Mein Beziehungs-\newline status.}%
-\whitecard{Basis}{Überkompen-\newline sation.}%
-\whitecard{Eklig}{Ein bisschen pinkeln.}
-
-\whitecard{Eklig}{Durchfall.\newline Für immer.}%
-\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Samen und Fussnägeln.}%
-\whitecard{FSK16}{Testikuläre\newline Verdrehung.}
-
-\whitecard{Basis}{Der Teufel höchst selbst.}%
-\whitecard{Basis}{The World of Warcraft.}%
-\whitecard{Böse}{Robo-Hitler.}
-
-\whitecard{Basis}{Einfach\newline großartig\newline sein.}%
-\whitecard{Basis}{Bilder von Brüsten.}%
-\whitecard{FSK16}{Sanftes Liebkosen der Oberschenkel.}
-
-\whitecard{Basis}{Die Amisch.}%
-\whitecard{Basis}{Der Rhythmus Afrikas.}%
-\whitecard{FSK16}{Lance\newline Armstrongs\newline fehlender\newline Hoden.}
-
-\whitecard{Böse}{Pedophile.}%
-\whitecard{Basis}{Der Papst.}%
-\whitecard{FSK16}{Fliegende Sex-Schlangen.}
-
-\whitecard{FSK16}{Erotische Kissen-\newline schlachten.}%
-\whitecard{Basis}{In Polen einmarschieren.}%
-\whitecard{Basis}{Kybernetische Verbesserungen.}
-
-\whitecard{Böse}{Verlust von Zivilisten.}%
-\whitecard{Basis}{Arbeitsplätze.}%
-\whitecard{FSK16}{Der weibliche Orgasmus.}
-
-\whitecard{Basis}{Schlampen.}%
-\whitecard{Basis}{Die Pfadfinder.}%
-\whitecard{Böse}{Auschwitz.}
-
-\whitecard{Basis}{Fingerfarben.}%
-\whitecard{Basis}{Der\newline Erklär-Bär-Blick.}%
-\whitecard{Böse}{Die Juden.}
-
-\whitecard{Basis}{Marginalisiert werden.}%
-\whitecard{Basis}{Das Blut von\newline Jesus Christus.}%
-\whitecard{Böse}{Tote Eltern.}
-
-\whitecard{Basis}{Die Kunst der Verführung.}%
-\whitecard{Basis}{An Dünnschiss sterben.}%
-\whitecard{Basis}{Meister Proper Sauberkraft.}
-
-\whitecard{Basis}{Ackerbau.}%
-\whitecard{Basis}{Richterin Barbara Salesch.}%
-\whitecard{FSK16}{Überraschungs Sex!}
-
-\whitecard{Basis}{Homosexueller\newline Lebensstil.}%
-\whitecard{Basis}{Eine Spur aus\newline Tränen}%
-\whitecard{Basis}{Funkig-frische Rhythmen.}
-
-\whitecard{Basis}{Das Licht einer Milliarde\newline Sonnen.}%
-\whitecard{Böse}{Menschen mit Amputationen.}%
-\whitecard{Basis}{Eine Jungfrau in einen Vulkan werfen.}
-
-\whitecard{Basis}{Italiener.}%
-\whitecard{Basis}{Explosionen.}%
-\whitecard{Basis}{Einmal richtig dran\newline schnuppern.}
-
-\whitecard{Basis}{Beweise\newline vernichten.}%
-\whitecard{Basis}{Kinder an\newline Leinen.}%
-\whitecard{Basis}{Katapulte.}
-
-\whitecard{Basis}{Eine Billiarde Euro.}%
-\whitecard{Basis}{Freunde mit\newline gewissen\newline Vorzügen.}%
-\whitecard{Basis}{Sterben.}
-
-\whitecard{Basis}{Stille.}%
-\whitecard{Basis}{Sich ein paar\newline Eier wachsen lassen.}%
-\whitecard{Basis}{DU MUSST\newline WEITERE\newline MASTEN\newline KONSTRUIEREN.}
-
-\whitecard{Basis}{Justin Bieber.}%
-\whitecard{Basis}{Die Bibel.}%
-\whitecard{Basis}{Eier.}
-
-\whitecard{Basis}{Für das\newline Verschwinden\newline von Schwulen\newline beten.}%
-\whitecard{Basis}{Teenager Schwangerschaft.}%
-\whitecard{FSK18}{Deutsche \newline Sado-Maso-\newline Pornos.}
-
-\whitecard{Basis}{Die unsichtbare Hand.}%
-\whitecard{Basis}{Meine inneren Dämonen.}%
-\whitecard{Basis}{Kräftige\newline Oberschenkel.}
-
-\whitecard{FSK16}{Sich nackt\newline ausziehen und\newline Kika gucken.}%
-\whitecard{Basis}{Erdrückende Schulden.}%
-\whitecard{Basis}{Kamikaze-Kissen.}
-
-\whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
-\whitecard{Basis}{Polizeigewalt.}%
-\whitecard{Basis}{Pferdefleisch.}
-
-\whitecard{Basis}{All-you-can-eat Shrimps für 4,99 Euro.}%
-\whitecard{Basis}{Hetero-\newline normativität.}%
-\whitecard{Basis}{Michael Jackson.}
-
-\whitecard{Basis}{Ein wirklich\newline cooler Hut.}%
-\whitecard{Basis}{Von einem\newline Gefühl erwischt werden.}%
-\whitecard{Basis}{Crystal Meth.}
-
-\whitecard{Basis}{Gestaltwandler.}%
-\whitecard{FSK18}{Fingern.}%
-\whitecard{Basis}{Eine\newline enttäuschende Geburtstags-\newline party.}
-
-\whitecard{Basis}{Das Patriarchat.}%
-\whitecard{Basis}{Meine Seele.}%
-\whitecard{Basis}{Ein Würstchen-Fest.}
-
-\whitecard{Basis}{Star Trek.}%
-\whitecard{Böse}{Rassenhygiene.}%
-\whitecard{Basis}{Management-Lösungen mit Synergie-Effekt.}
-
-\whitecard{Basis}{RoboCop.}%
-\whitecard{Basis}{Sklaverei.}%
-\whitecard{FSK16}{Stephen Hawkings\newline Sexgespräche.}
-
-\whitecard{FSK16}{Ein Mann am Rande des\newline Orgasmus.}%
-\whitecard{Eklig}{Brennende Schisse.}%
-\whitecard{Basis}{Öffentliches\newline Verspotten.}
-
-\whitecard{Böse}{Skalps von\newline weißen\newline Männern.}%
-\whitecard{Basis}{Krankhaft\newline Fettleibige.}%
-\whitecard{Basis}{Activia\SymbReg.}
-
-\whitecard{Basis}{Kiefersperre.}%
-\whitecard{Basis}{Genetisch\newline manipulierte\newline Kampf-Schildkröten mit Säure-Atem.}%
-\whitecard{FSK16}{Feuchte Träume.}
-
-\whitecard{Basis}{Hip-Hop\newline Juwelen.}%
-\whitecard{FSK18}{Ein Gewehr\newline in die Luft\newline abfeuern mit\newline den Eiern tief in einer\newline quiekenden Sau.}%
-\whitecard{FSK18}{Panda Sex.}
-
-\whitecard{Böse}{Nekrohpilie.}%
-\whitecard{Basis}{Grabrauben.}%
-\whitecard{FSK16}{Ein gebleichtes Arschloch.}
-
-\whitecard{Basis}{Mohammed (Geheiligt sei sein Name).}%
-\whitecard{Basis}{Mehrfache Stichwunden.}%
-\whitecard{FSK16}{Daniel\newline Radcliffes\newline appetitliches Arschloch.}
-
-\whitecard{Basis}{Ein rauchender Affe.}%
-\whitecard{Eklig}{Smegma.}%
-\whitecard{Basis}{Ein Live-Studio Publikum.}
-
-\whitecard{Basis}{Einen Schmollmund machen.}%
-\whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
-\whitecard{Basis}{Unfassbare Blödheit.}
-
-\whitecard{Basis}{Sonnenschein und\newline Regenbögen.}%
-\whitecard{FSK16}{"Ihn" rausholen.}%
-\whitecard{Basis}{Die Terroristen.}
-
-\whitecard{FSK18}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}%
-\whitecard{Böse}{Vehikulärer Massenmord.}%
-\whitecard{Basis}{Die Eurokrise.}
-
-\whitecard{Basis}{Emotionen.}%
-\whitecard{FSK16}{So wütend werden, dass man\newline eine Erektion\newline bekommt.}%
-\whitecard{Basis}{Gleich-\newline geschlechtlicher\newline Eiskunstlauf.}
-
-\whitecard{Basis}{Ein M16\newline Sturmgewehr.}%
-\whitecard{Böse}{Menschenfleisch.}%
-\whitecard{FSK18}{Inzest.}
-
-\whitecard{Basis}{Ein schlechtes Mundwerk.}%
-\whitecard{Basis}{Fluglose Vögel.}%
-\whitecard{Basis}{Das Richtige tun.}
-
-\whitecard{Eklig}{Wenn man furzt und ein bisschen mit rauskommt.}%
-\whitecard{Basis}{Frohlocken.}%
-\whitecard{Basis}{Ein Arschloch zu Kindern sein.}
-
-\whitecard{Eklig}{Vollgeschissene Windeln.}%
-\whitecard{FSK16}{Oma nackt\newline sehen.}%
-\whitecard{Basis}{Velociraptor\newline Angriffe.}
-
-\whitecard{Basis}{Swooping}%
-\whitecard{Basis}{Eine Errektion verstecken.}%
-\whitecard{FSK16}{Vollständige Nacktheit.}
-
-\whitecard{Basis}{Eregierte\newline Nippel.}%
-\whitecard{Basis}{Eine Backpfeife.}%
-\whitecard{Basis}{Angela Merkels Oberarme.}
-
-\whitecard{Basis}{Herpes.}%
-\whitecard{Böse}{Ein robuster Mongoloider.}%
-\whitecard{Basis}{Beidseitige\newline Bereitschaft\newline zum nuklearen\newline Gegenschlag.}
-
-\whitecard{Basis}{Das jüngste\newline Gericht.}%
-\whitecard{Basis}{Das Ende der Straße.}%
-\whitecard{Basis}{Stalin.}
-
-\whitecard{FSK16}{Laktation.}%
-\whitecard{Basis}{Hurricane\newline Katrina.}%
-\whitecard{Basis}{Die wahre\newline Bedeutung von\newline Weihnachten.}
-
-\whitecard{Basis}{Selbsthass.}%
-\whitecard{Basis}{Ein Gehirntumor.}%
-\whitecard{Böse}{Tote Babys.}
-
-\whitecard{Basis}{Hippiemusik.}%
-\whitecard{Basis}{Thermonucleare Detonation.}%
-\whitecard{Basis}{Gänse.}
-
-\whitecard{Basis}{Sido.}%
-\whitecard{Basis}{Gott.}%
-\whitecard{Basis}{Ein Nerd-Spasti.}
-
-\whitecard{FSK16}{Erotische\newline Harry-Potter\newline Literatur.}%
-\whitecard{Böse}{Kinder mit Arsch-Krebs.}%
-\whitecard{Basis}{Holzfäller\newline Phantasien.}
-
-\whitecard{Basis}{Der\newline amerikanische\newline Traum.}%
-\whitecard{Basis}{Pubertät.}%
-\whitecard{Basis}{Süße, süße\newline Vergeltug.}
-
-\whitecard{Basis}{Alten Leuten winken.}%
-\whitecard{Basis}{Die Wunder des Orients.}%
-\whitecard{Basis}{Oompa-Loompas.}
-
-\whitecard{Basis}{Authentische\newline mexikanische\newline Cuisine.}%
-\whitecard{Basis}{Pre-Teens.}%
-\whitecard{Basis}{Thomas the Train.}
-
-\whitecard{FSK18}{Ein Fleshlight.}%
-\whitecard{FSK16}{Erektile\newline Dysfunktion.}%
-\whitecard{Basis}{Ein Arsch mit Ohren sein.}
-
-\whitecard{Eklig}{Günther Jauchs weicher,\newline beschissener\newline Körper.}%
-\whitecard{Basis}{Saxophon Solos.}%
-\whitecard{Basis}{Landminen.}
-
-\whitecard{FSK18}{Kein Sperma\newline mehr übrig\newline haben.}%
-\whitecard{Basis}{Zeit für mich.}%
-\whitecard{Basis}{Nickelback.}
-
-\whitecard{Basis}{Selbstjustiz.}%
-\whitecard{Basis}{Bayern.}%
-\whitecard{Basis}{Opponierbare Daumen.}
-
-\whitecard{Basis}{Geister.}%
-\whitecard{Basis}{Alkoholismus.}%
-\whitecard{Böse}{Schlechte Holocaust-Witze.}
-
-\whitecard{Basis}{Unangemes-\newline senes Jodeln.}%
-\whitecard{Basis}{Kriegsbedingte Amputationen.}%
-\whitecard{Basis}{Genau das,\newline was du\newline vermuten\newline würdest.}
-
-\whitecard{Basis}{Zeitreisen\newline Paradox.}%
-\whitecard{Basis}{AXE\SymbReg Deo.}%
-\whitecard{Basis}{Das Leben eines Piraten.}
-
-\whitecard{Basis}{``Ich liebe dich''\newline sagen.}%
-\whitecard{FSK16}{Eine erotische schwarze Frau.}%
-\whitecard{Basis}{Ein\newline gottverdammter Zauberer\newline sein.}
-
-\whitecard{Basis}{Ein törichter Mord.}%
-\whitecard{Basis}{Ein Falke mit\newline einer Mütze\newline auf dem Kopf.}%
-\whitecard{Eklig}{Furzen und dann weglaufen.}
-
-\whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
-\whitecard{Basis}{Hefe.}%
-\whitecard{Basis}{Bifi\SymbReg.}
-
-\whitecard{Basis}{An Dingen\newline lecken, um sie\newline für sich selbst zu\newline beanspruchen.}%
-\whitecard{Basis}{Wikinger.}%
-\whitecard{Basis}{Der Ahoi-Brause Mann.}
-
-\whitecard{Basis}{Heißer Käse.}%
-\whitecard{Basis}{Nicolas Cage.}%
-\whitecard{FSK16}{Ein kaputtes Kondom.}
-
-\whitecard{Basis}{Der unausweichliche\newline Hitzetod des\newline Universums.}%
-\whitecard{Basis}{CDU-Wähler.}%
-\whitecard{Basis}{William Shatner.}
-
-\whitecard{FSK18}{Tentakel Pornos.}%
-\whitecard{Basis}{Lady Gaga.}%
-\whitecard{FSK18}{Gloryholes.}
-
-\whitecard{Basis}{Vaterkomplexe.}%
-\whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzanfall hat.}%
-\whitecard{Basis}{Spießer.}
-
-\whitecard{Basis}{Ein Leben voller Traurigkeit.}%
-\whitecard{Basis}{Ein geschmackvolles Dekolleté.}%
-\whitecard{Basis}{In Problemen ertrinken.}
-
-\whitecard{Basis}{Nazis.}%
-\whitecard{Böse}{Ein Kühlschrank voller Organe.}%
-\whitecard{Basis}{110\% geben}
-
-\whitecard{FSK18}{Anal-Sex.}%
-\whitecard{Eklig}{Ein Kind\newline festhalten und\newline es anfurzen.}%
-\whitecard{Basis}{Eine\newline homoerotische\newline Volleyball-\newline Montage.}
-
-\whitecard{Basis}{Welpen!}%
-\whitecard{Basis}{Natürliche männliche Verbesserungen.}%
-\whitecard{Basis}{Schwarze.}
-
-\whitecard{Basis}{Einen\newline Kerzenhalter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}%
-\whitecard{Basis}{Suppe, die zu heiß ist.}%
-\whitecard{FSK18}{Sex mit Patrick Steward.}
-
-\whitecard{Basis}{Hormon-Injektionen.}%
-\whitecard{Basis}{Die Hose\newline runterlassen.}%
-\whitecard{Basis}{Der Urknall.}
-
-\whitecard{Basis}{Den Antichrist gebären.}%
-\whitecard{Basis}{Darke und\newline mysteriöse\newline Mächte,\newline die man nicht kontrollieren kann.}%
-\whitecard{FSK18}{Oralsex nicht\newline erwiedern.}
-
-\whitecard{Basis}{Heiße\newline Menschen.}%
-\whitecard{FSK16}{Vorhäute.}%
-\whitecard{Basis}{Burschen ohne Ärsche.}
-
-\whitecard{Basis}{Das Wunder der Geburt.}%
-\whitecard{Basis}{Bis nach der\newline Hochzeit\newline warten.}%
-\whitecard{Eklig}{Zwei\newline Kleinwüchsige,\newline die in einen\newline Eimer\newline scheissen.}
-
-\whitecard{FSK18}{Ein schlechter Handjob.}%
-\whitecard{Basis}{Bei den\newline Special\newline Olympics\newline schummeln.}%
-\whitecard{Basis}{Ein Glassdach.}
-
-\whitecard{Basis}{Miley Cyrus mit 55.}%
-\whitecard{Basis}{Unser erster Chimpansen-Kanzler.}%
-\whitecard{Basis}{Anfangen, zu Singen und zu Tanzen.}
-
-\whitecard{Eklig}{Ein Schwamm\newline voller\newline Katzenpisse.}%
-\whitecard{Basis}{U-Bahn.}%
-\whitecard{Basis}{Martin Luther King.}
-
-\whitecard{Basis}{Extrem enge Hosen.}%
-\whitecard{Basis}{Halb nackt\newline auf einem\newline McDonalds-\newline Parkplatz\newline aufwachen.}%
-\whitecard{Basis}{Der kalte,\newline erfrischende\newline Geschmack\newline einer Pepsi\SymbReg}
-
-\whitecard{Basis}{Die priviligierte Oberklasse.}%
-\whitecard{Basis}{Hoffnung.}%
-\whitecard{Basis}{Sein Shirt\newline ausziehen.}
-
-\whitecard{Basis}{Ethnische\newline Säuberung.}%
-\whitecard{Basis}{Ein Fotzenfurz.}%
-\whitecard{Basis}{Snobismus.}
-
-\whitecard{Basis}{Winnie der Puh.}%
-\whitecard{Basis}{Frank-Walter Steinmeier.}%
-\whitecard{Basis}{Adolf Hitler.}
-
-\whitecard{Basis}{Vera Int-Veen}%
-\whitecard{Basis}{Robert Downey, Jr.}%
-\whitecard{Basis}{Eine M. Night\newline Shyamalan\newline Story-Wendung.}
-
-\whitecard{Basis}{Thermodynamik.}%
-\whitecard{Basis}{Sigmar Gabriel.}%
-\whitecard{Basis}{Die\newline Alibi-Minderheit.}
-
-\whitecard{Basis}{Anders Breivik.}%
-\whitecard{Basis}{Dibadibadu.}%
-\whitecard{Basis}{Michael \newline``Bully''\newline Herbig.}
-
-\whitecard{Basis}{Das\newline Cookie Monster.}%
-\whitecard{Basis}{Ronald\newline McDonald.}%
-\whitecard{Basis}{Marcus Iunius Brutus.}
-
-\whitecard{Drogen}{Amphetamin.}%
-\whitecard{Basis}{Zuhälter.}%
-\whitecard{Basis}{Ein\newline Amateurvideo\newline von Heidi Klum,\newline wie sie in eine\newline Dose Ravioli\newline heult.}
-
-\whitecard{Basis}{Schenkel-\newline schnorcheln.}%
-\whitecard{Basis}{Plutoniumpille.}%
-\whitecard{Basis}{Ein trübseliger Zoo-Löwe.}
-
-\whitecard{Basis}{Balzverhalten.}%
-\whitecard{Basis}{Pottwale.}%
-\whitecard{Basis}{Der Zorn des\newline Putins.}
-
-\whitecard{Basis}{Der Versailler Vertrag.}%
-\whitecard{Basis}{Bei der\newline Erwähnung von\newline Hutus und\newline Tutsis\newline unkontrollierbar\newline kichern müssen.}%
-\whitecard{Drogen}{Mal so richtig\newline high werden.}
-
-\whitecard{Basis}{Natürliche\newline Selektion.}%
-\whitecard{Basis}{Eine\newline geschwätzige\newline Antilope.}%
-\whitecard{Basis}{Mein Sexleben.}
-
-\whitecard{Basis}{Arnold Schwarzenegger.}%
-\whitecard{Basis}{So zu tun, als interessiere es einen.}%
-\whitecard{Basis}{Eine hässliche Fresse.}
-
-\whitecard{Basis}{Mein schwarzer Hintern.}%
-\whitecard{Basis}{BATMAN!!!}%
-\whitecard{Basis}{Obdachlose.}
-
-\whitecard{Basis}{Zentauren.}%
-\whitecard{Basis}{Eine salzige Überraschung.}%
-\whitecard{Basis}{72 Jungfrauen.}
-
-\whitecard{Basis}{Embrionale Stammzellen.}%
-\whitecard{FSK18}{Zensierte Bukkakke-Pornos.}%
-\whitecard{Basis}{Eine Eishacken-Lobotomie.}
-
-\whitecard{Basis}{Echte zwischenmenschliche\newline Beziehungen.}%
-\whitecard{Basis}{Munstrell\newline bedingte\newline Wutanfälle.}%
-\whitecard{FSK18}{Natursekt.}
-
-\whitecard{Eklig}{Ein endloser\newline Strom aus\newline Diarrhoe.}%
-\whitecard{Basis}{Schreckliche\newline Laser-Haar-\newline Entfernungs-\newline Unfälle.}%
-\whitecard{Böse}{Auto-\newline kannibalismus.}
-
-\whitecard{Basis}{Ein Fötus.}%
-\whitecard{Basis}{Dem Sonnen-\newline untergang\newline entgegenreiten.}%
-\whitecard{Basis}{Goblins.}
-
-\whitecard{Basis}{Das letzte noch lebende Bison essen.}%
-\whitecard{Basis}{Glänzende\newline Dinge.}%
-\whitecard{Basis}{Reich sein.}
-
-\whitecard{Basis}{Lepra.}%
-\whitecard{Basis}{Weltfrieden.}%
-\whitecard{FSK16}{Penis-Finger.}
-
-\whitecard{Basis}{Kettensäge für die Hände.}%
-\whitecard{FSK16}{Penis-Atem.}%
-\whitecard{Basis}{Ein Ei legen.}
-
-\whitecard{Basis}{Die unendliche menschliche Dummheit.}%
-\whitecard{Basis}{Meine\newline Genitalien.}%
-\whitecard{Basis}{Großmutter.}
-
-\whitecard{Basis}{Fleischfressende Bakterien.}%
-\whitecard{Basis}{Arbeitslose.}%
-\whitecard{FSK16}{50,000 Volt\newline genau in die\newline Nippel.}
-
-\whitecard{Basis}{Aktives\newline Zuhören.}%
-\whitecard{Basis}{Der\newline Übermensch.}%
-\whitecard{Basis}{Schlechte, lebensverändernde Entscheidungen.}
-
-\whitecard{Basis}{Messdiener.}%
-\whitecard{FSK16}{Meine Vagina.}%
-\whitecard{Basis}{Pacman, unkontrollierbar am Sperma-Schlucken.}
-
-\whitecard{Basis}{Kleber schnüffeln.}%
-\whitecard{Basis}{Die Placenta.}%
-\whitecard{Böse}{Schwer-\newline behinderte.}
-
-\whitecard{Basis}{Spontane Selbstentzündung.}%
-\whitecard{Basis}{Der\newline Ku-Klux-Klan.}%
-\whitecard{FSK16}{Klitoris.}
-
-\whitecard{Basis}{Keine Hosen\newline tragen.}%
-\whitecard{Basis}{Ein-\newline vernehmlicher Sex.}%
-\whitecard{Basis}{Schwarze.}
-
-\whitecard{Basis}{Ein Eimer voller Fischköpfe.}%
-\whitecard{Basis}{Krankenpfleger.}%
-\whitecard{Basis}{Passiv-aggressive\newline Post-It Zettel.}
-
-\whitecard{Basis}{Das Herz eines Kindes.}%
-\whitecard{Basis}{Krümel überall auf dem ganzen gottverdammten Teppich.}%
-\whitecard{Basis}{Dein\newline merkwürdiger\newline Bruder.}
-
-\whitecard{Basis}{Fett und dumm sein.}%
-\whitecard{Basis}{Heiraten, ein\newline paar Kinder\newline haben, ein\newline bisschen Kram\newline kaufen, sich dann\newline zur Ruhe setzen\newline und sterben.}%
-\whitecard{Basis}{Sean Connery.}
-
-\whitecard{Basis}{Einen Rülpser\newline erwarten und\newline stattdessen auf\newline den Boden\newline kotzen.}%
-\whitecard{Basis}{Ehefrauliche Pflichten.}%
-\whitecard{Böse}{Eine Pyramide\newline aus\newline abgetrennten\newline Köpfen.}
-
-\whitecard{Basis}{Genghis Khan.}%
-\whitecard{Basis}{Berühmte\newline schwarze\newline Kollegen.}%
-\whitecard{Böse}{Kreuzigung.}
-
-\whitecard{Basis}{Eine\newline Mitgliedschaft\newline in einem\newline Fitness-Center.}%
-\whitecard{Basis}{Der Milchmann.}%
-\whitecard{Basis}{Friendly Fire.}
-
-\whitecard{Basis}{Die Leiden einer Frau.}%
-\whitecard{Böse}{AIDS.}%
-\whitecard{Basis}{George W. Bush.}
-
-\whitecard{Drogen}{8kg Heroin.}%
-\whitecard{FSK16}{Schlechtes\newline Vorspiel.}%
-\whitecard{Basis}{Essbare\newline Unterwäsche.}
-
-\whitecard{FSK18}{Meine\newline Sammlung an\newline High-Tech-Sex-newline Spielzeugen.}%
-\whitecard{Basis}{Die Macht.}%
-\whitecard{Basis}{Bienen?}
-
-\whitecard{Basis}{Ein bisschen\newline gottverdammte\newline Ruhe und\newline Frieden.}%
-\whitecard{FSK18}{In einen Pool\newline voller\newline Kindertränen\newline wichsen.}%
-\whitecard{Basis}{Ein\newline Mikroschwein\newline mit einem\newline Regenmantel\newline und\newline Gummiestiefeln.}
-
-\whitecard{FSK18}{Drei Schwänze auf einmal.}%
-\whitecard{FSK16}{Masturbation.}%
-\whitecard{Basis}{Tom Cruise.}
-
-\whitecard{Basis}{Ein\newline ausgewogenes\newline Frühstück.}%
-\whitecard{FSK18}{Analkette.}%
-\whitecard{Basis}{Sich alleine\newline betrinken.}
-
-\whitecard{Basis}{Cards against Humanity.}%
-\whitecard{Böse}{Abtreibungen\newline mit\newline Kleiderbügeln.}%
-\whitecard{Basis}{Benutzte\newline Unterhosen.}
-
-\whitecard{Basis}{Kuscheln.}%
-\whitecard{FSK18}{Ihr den Arsch abwischen.}%
-\whitecard{Basis}{Dominos\SymbReg Oreo Dessert Pizza.}
-
-\whitecard{Basis}{Ein scharfer Frühstücks-Burrito.}%
-\whitecard{Basis}{Morgan\newline Freemans\newline Stimme.}%
-\whitecard{Basis}{Ein Mann\newline mittleren\newline Alters in\newline Rollschuhen.}
-
-\whitecard{Basis}{Gandhi.}%
-\whitecard{Basis}{Das Flötensolo aus "My Heart Will Go On".}%
-\whitecard{Basis}{Spektakuläre Bauchmuskeln.}
-
-\whitecard{Basis}{Keanu Reeves.}%
-\whitecard{Basis}{Kinder-Schönheits-\newline wettbewerbe.}%
-\whitecard{Böse}{Kindes-\newline missbrauch.}
-
-\whitecard{Basis}{Bill Nye,\newline dieser Wissenschafts-Heini.}%
-\whitecard{Basis}{Wissenschaft.}%
-\whitecard{Basis}{Ein Stamm von Kriegerinnen.}
-
-\whitecard{Basis}{Viagra\SymbReg.}%
-\whitecard{Basis}{Ihre Majestät,\newline Königin\newline Elizabeth II.}%
-\whitecard{Basis}{Der gesamte Chor aus einem Mormonen-Gotteshaus.}
-
-\whitecard{Basis}{Die jährliche Massenhinrichtung.}%
-\whitecard{Basis}{Rück-\newline erstattungen.}%
-\whitecard{Basis}{Eine Erektion, die länger als vier Stunden dauert.}
-
-%
-% Here comes the black cards
-%
-
-
-\blackcard{1}{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
-\blackcard{1}{Basis}{Warum tut mir alles weh?}%
-\blackcard{1}{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben?}
-
-\blackcard{1}{Basis}{\underl + \underl\newline = \underl.}%
-\blackcard{1}{Drogen}{Was ist\newline meine\newline Anti-Droge?}%
-\blackcard{1}{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie?}
-
-\blackcard{1}{Drogen}{Als einen Acid-trip hatte, wurde \underl zu \underl.}%
-\blackcard{1}{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu gedenken würde ich eine Statue bauen?}%
-\blackcard{1}{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}
-
-\blackcard{1}{Basic}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
-\blackcard{1}{Basis}{Was ist die neue Modediät?}%
-\blackcard{1}{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}
-
-\blackcard{1}{FSK18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
-\blackcard{1}{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
-\blackcard{1}{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}
-
-\blackcard{1}{Basis}{Ich weiß nicht, mit welchen Waffen der 3. Weltkrieg gekämpft wird, aber der 4. Weltkrieg wird mit \underl gekämpft.}%
-\blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als die Weißen Männer ihnen \underl zeigten.}%
-\blackcard{1}{FSK16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}
-
-\blackcard{1}{Basis}{Papa, warum weint Mama?}%
-\blackcard{1}{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}%
-\blackcard{1}{Basis}{Was wird mit dem Alter besser?}
-
-\blackcard{1}{Basis}{Warum bin ich so klebrig?}%
-\blackcard{1}{Basis}{\underl:\newline Gut bis zum letzten Tropfen.}%
-\blackcard{1}{Basis}{Was hat Vin Diesel zum Mittag gegessen?}
-
-\blackcard{1}{Basis}{Was hilft Angela Merkel zum Entspannen?}%
-\blackcard{1}{Böse}{Was haben die USA den Kindern in Afganistan vom Flugzeug abgeworden?\newline \underl.}%
-\blackcard{1}{Basis}{Statt Kohle bring der Weihnachtsmann unartigen Kindern jetzt \underl.}
-
-\blackcard{1}{Basis}{Was würde Oma ekelhaft, aber doch seltsam bezaubernd finden?}%
-\blackcard{1}{Basis}{Was gibt es tonnenweise im Himmel?}%
-\blackcard{1}{Basis}{Was ist meine geheime Kraft?}
-
-\blackcard{1}{Basis}{Als der Pharaoh seine Meinung nicht änderte, beschwörte Moses eine Plage von \underl herauf.}%
-\blackcard{1}{Basis}{Der Klassenausflug wurde komplett von \underl ruiniert.}%
-\blackcard{1}{FSK16}{Was lässt mich unkontrolliert furzen?}
-
-\blackcard{1}{Basis}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
-\blackcard{1}{FSK16}{Sie sagten wir wären verrückt.\newline Sie sagten, wir könnten nicht \underl in \underl stecken.\newline Sie lagen falsch.}%
-\blackcard{1}{Basis}{Schritt 1: \underl.\newline Schritt 2: \underl.\newline Schritt 3: Profit.}
-
-\blackcard{1}{Basis}{Gleich auf RTL:\newline die Weltmeisterschaft der \underl.}%
-\blackcard{1}{Basis}{Nach den\newline Erdbeben\newline brachte Bill\newline Gates \underl zu\newline den Haitianern.}%
-\blackcard{1}{Basis}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
-
-\blackcard{1}{Basis}{Bald zu sehen: \underl, das Musical.}%
-\blackcard{1}{Basis}{Wie pflege ich meinen Beziehungsstatus?\newline Mit \underl.}%
-\blackcard{1}{Basis}{Was werde ich aus der Zukunft mitbringen, um alle davon zu überzeugen, dass ich ein großartiger Magier bin?}
-
-\blackcard{1}{Basis}{Was willst du nicht in deinem asiatischen Essen finden?}%
-\blackcard{1}{Basis}{Was bringe ich aus der Türkei mit?}%
-\blackcard{1}{Basis}{Man sagt, man könne im Knast \underl für 200 Zigaretten bekommen.}
-
-\blackcard{1}{Basis}{Womit wirst du immer einen Partner beeindrucken können?}%
-\blackcard{1}{Basis}{Was verstecken meine Eltern vor mir?}%
-\blackcard{1}{FSK16}{Ich denke wärend des Sex gerne über \underl nach.}
-
-\blackcard{1}{Böse}{Wofür ist Krieg gut?}%
-\blackcard{1}{Basis}{In einer Welt verwüstet von \underl, ist dein einziger Trost \underl.}%
-\blackcard{1}{Basis}{Wir stellen Xtreme Fußball vor! Es ist wie normales Fußball, nur mit \underl.}
-
-\blackcard{1}{Basis}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
-\blackcard{1}{Basis}{\underl. High Five, bro.}%
-\blackcard{1}{Böse}{Weiße Menschen wie \underl.}
-
-\blackcard{1}{Basis}{Ein Essen im Kerzenschein wäre nix ohne \underl.}%
-\blackcard{1}{Basis}{Das neue Superhelden/Kumpan Duo! Es ist \underl und \underl.}%
-\blackcard{1}{Basis}{Womit werden wir in 1000 Jahren bezahlen? Mit \underl.}
-
-\blackcard{1}{Basis}{Liebe Margret, Ich habe Probleme mit \underl.\newline Kannst du mir einen Rat geben?}%
-\blackcard{1}{Basis}{Ich komme klar mit ein wenig Hilfe von \underl.}%
-\blackcard{1}{Basis}{\underl ist eine heikle Lage die zu \underl führt.}
-
-\blackcard{1}{Bais}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
-\blackcard{1}{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
-\blackcard{1}{Basis}{\underl. So will ich sterben!}
-
-\blackcard{1}{Basis}{Ab sofort im Flugzeug verboten: \underl.}%
-\blackcard{1}{Basis}{Was ist der beste Freund eines Mädchens?}%
-\blackcard{1}{Basis}{Was ist Batmans geheime Vorliebe?}
-
-\blackcard{1}{Basis}{Es tut mir Leid, Herr Professor, aber ich konnte meine Hausaufgaben nicht machen, weil \underl.}%
-\blackcard{1}{Basis}{Ich trinke, um \underl zu vergessen.}%
-\blackcard{1}{Basis}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars die mit \underl zusammenleben.}
-
-\blackcard{1}{Basis}{Was hat meine letzte Beziehung beendet?}%
-\blackcard{1}{Basis}{Was ist das für ein geräusch?}%
-\blackcard{1}{Basis}{...Und der Preis für \underl geht an \underl.}
-
-\blackcard{1}{Basis}{Alternative Medizin nutzt jetzt die heilende Energie von \underl.}%
-\blackcard{1}{Basis}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
-
-\blackcard{1}{Basis}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}%
-\blackcard{1}{Basis}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
-\blackcard{1}{Basis}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}
-\blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}
-
-\blackcard{1}{Basis}{Ich habe 99 Probleme, aber \underl ist keines davon.}%
-\blackcard{1}{Basis}{Was ist das für ein Geruch?}%
-\blackcard{1}{Basis}{Warum kann ich nachts nicht schlafen?}
-
-\blackcard{1}{FSK16}{Wie verlor ich meine Jungfräulichkeit?}
+\include{categories/basic}
+\include{categories/boese}
+\include{categories/drogen}
+\include{categories/eklig}
+\include{categories/fsk16}
+\include{categories/fsk18}
+\include{categories/politics}
 
 \end{document}
