--- a/categories/basic.tex
+++ b/categories/basic.tex
@@ -15,15 +15,12 @@
 \whitecard{Basis}{Anders Breivik.}
 \whitecard{Basis}{An Dingen\newline lecken, um sie\newline für sich selbst zu\newline beanspruchen.}
 \whitecard{Basis}{Anfangen, zu Singen und zu Tanzen.}
-\whitecard{Basis}{Angela Merkel.}
 \whitecard{Basis}{Angela Merkels Oberarme.}
 \whitecard{Basis}{Arbeitslose.}
-\whitecard{Basis}{Arbeitsplätze.}
 \whitecard{Basis}{Arnold Schwarzenegger.}
 \whitecard{Basis}{Authentische\newline mexikanische\newline Cuisine.}
 \whitecard{Basis}{AXE\SymbReg Deo.}
 \whitecard{Basis}{Balzverhalten.}
-\whitecard{Basis}{Barack Obama.}
 \whitecard{Basis}{BATMAN!!!}
 \whitecard{Basis}{Bayern.}
 \whitecard{Basis}{Bei den\newline Special\newline Olympics\newline schummeln.}
@@ -40,7 +37,6 @@
 \whitecard{Basis}{Bis nach der\newline Hochzeit\newline warten.}
 \whitecard{Basis}{Burschen ohne Ärsche.}
 \whitecard{Basis}{Cards against Humanity.}
-\whitecard{Basis}{CDU-Wähler.}
 \whitecard{Basis}{Crystal Meth.}
 \whitecard{Basis}{Darke und\newline mysteriöse\newline Mächte,\newline die man nicht kontrollieren kann.}
 \whitecard{Basis}{Darth Vader.}
@@ -90,8 +86,6 @@
 \whitecard{Basis}{Die\newline Alibi-Minderheit.}
 \whitecard{Basis}{Die Pfadfinder.}
 \whitecard{Basis}{Die Placenta.}
-\whitecard{Basis}{Die priviligierte Oberklasse.}
-\whitecard{Basis}{Die Terroristen.}
 \whitecard{Basis}{Die unendliche menschliche Dummheit.}
 \whitecard{Basis}{Die unsichtbare Hand.}
 \whitecard{Basis}{Die wahre\newline Bedeutung von\newline Weihnachten.}
@@ -122,13 +116,11 @@
 \whitecard{Basis}{Eine\newline homoerotische\newline Volleyball-\newline Montage.}
 \whitecard{Basis}{Eine\newline Mitgliedschaft\newline in einem\newline Fitness-Center.}
 \whitecard{Basis}{Einen\newline Kerzenhalter\newline auf deine\newline Feinde fallen\newline lassen und\newline am Seil\newline hochklettern.}
-\whitecard{Basis}{Einen Rülpser\newline erwarten und\newline stattdessen auf\newline den Boden\newline kotzen.}
 \whitecard{Basis}{Einen Schmollmund machen.}
 \whitecard{Basis}{Eine salzige Überraschung.}
 \whitecard{Basis}{Eine Spur aus\newline Tränen}
 \whitecard{Basis}{Einfach\newline großartig\newline sein.}
 \whitecard{Basis}{Ein Falke mit\newline einer Mütze\newline auf dem Kopf.}
-\whitecard{Basis}{Ein Fotzenfurz.}
 \whitecard{Basis}{Ein Gehirntumor.}
 \whitecard{Basis}{Ein geschmackvolles Dekolleté.}
 \whitecard{Basis}{Ein Glassdach.}
@@ -143,7 +135,6 @@
 \whitecard{Basis}{Ein\newline ausgewogenes\newline Frühstück.}
 \whitecard{Basis}{Ein\newline gottverdammter Zauberer\newline sein.}
 \whitecard{Basis}{Ein\newline Mikroschwein\newline mit einem\newline Regenmantel\newline und\newline Gummiestiefeln.}
-\whitecard{Basis}{Ein-\newline vernehmlicher Sex.}
 \whitecard{Basis}{Ein Pantomime,\newline der einen\newline Herzanfall hat.}
 \whitecard{Basis}{Ein Ratschlag von einem weisen alten Mann.}
 \whitecard{Basis}{Ein rauchender Affe.}
@@ -170,19 +161,16 @@
 \whitecard{Basis}{Fingerfarben.}
 \whitecard{Basis}{Fleischfressende Bakterien.}
 \whitecard{Basis}{Fluglose Vögel.}
-\whitecard{Basis}{Frank-Walter Steinmeier.}
 \whitecard{Basis}{Frauen in Joghurt-Werbespots.}
 \whitecard{Basis}{Freunde mit\newline gewissen\newline Vorzügen.}
 \whitecard{Basis}{Friendly Fire.}
 \whitecard{Basis}{Frohlocken.}
 \whitecard{Basis}{Funkig-frische Rhythmen.}
 \whitecard{Basis}{Für das\newline Verschwinden\newline von Schwulen\newline beten.}
-\whitecard{Basis}{Gandhi.}
 \whitecard{Basis}{Gänse.}
 \whitecard{Basis}{Geister.}
 \whitecard{Basis}{Genau das,\newline was du\newline vermuten\newline würdest.}
 \whitecard{Basis}{Genetisch\newline manipulierte\newline Kampf-Schildkröten mit Säure-Atem.}
-\whitecard{Basis}{George W. Bush.}
 \whitecard{Basis}{Gerichtlich\newline angeordneter \newline Entzug.}
 \whitecard{Basis}{Gestaltwandler.}
 \whitecard{Basis}{Glänzende\newline Dinge.}
@@ -207,11 +195,8 @@
 \whitecard{Basis}{Hormon-Injektionen.}
 \whitecard{Basis}{Hurricane\newline Katrina.}
 \whitecard{Basis}{``Ich liebe dich''\newline sagen.}
-\whitecard{Basis}{Ihre Majestät,\newline Königin\newline Elizabeth II.}
 \whitecard{Basis}{In Flammen \newline stehen.}
-\whitecard{Basis}{In Polen einmarschieren.}
 \whitecard{Basis}{In Problemen ertrinken.}
-\whitecard{Basis}{Italiener.}
 \whitecard{Basis}{Justin Bieber.}
 \whitecard{Basis}{Kamikaze-Kissen.}
 \whitecard{Basis}{Katapulte.}
@@ -221,7 +206,6 @@
 \whitecard{Basis}{Kiefersperre.}
 \whitecard{Basis}{Kinder an\newline Leinen.}
 \whitecard{Basis}{Kinder-Schönheits-\newline wettbewerbe.}
-\whitecard{Basis}{Kleber schnüffeln.}
 \whitecard{Basis}{Kostenlose Proben.}
 \whitecard{Basis}{Kräftige\newline Oberschenkel.}
 \whitecard{Basis}{Krankenpfleger.}
@@ -232,7 +216,6 @@
 \whitecard{Basis}{Kybernetische Verbesserungen.}
 \whitecard{Basis}{Lady Gaga.}
 \whitecard{Basis}{Landminen.}
-\whitecard{Basis}{Lepra.}
 \whitecard{Basis}{Management-Lösungen mit Synergie-Effekt.}
 \whitecard{Basis}{Männer.}
 \whitecard{Basis}{Marcus Iunius Brutus.}
@@ -255,7 +238,6 @@
 \whitecard{Basis}{Munstrell\newline bedingte\newline Wutanfälle.}
 \whitecard{Basis}{Natürliche männliche Verbesserungen.}
 \whitecard{Basis}{Natürliche\newline Selektion.}
-\whitecard{Basis}{Nazis.}
 \whitecard{Basis}{Nickelback.}
 \whitecard{Basis}{Nicolas Cage.}
 \whitecard{Basis}{Obdachlose.}
@@ -275,7 +257,6 @@
 \whitecard{Basis}{Pre-Teens.}
 \whitecard{Basis}{Pubertät.}
 \whitecard{Basis}{Rassismus.}
-\whitecard{Basis}{Rassismus.}
 \whitecard{Basis}{Reich sein.}
 \whitecard{Basis}{Richterin Barbara Salesch.}
 \whitecard{Basis}{Robert Downey, Jr.}
@@ -288,7 +269,6 @@
 \whitecard{Basis}{Schlechte, lebensverändernde Entscheidungen.}
 \whitecard{Basis}{Schreckliche\newline Laser-Haar-\newline Entfernungs-\newline Unfälle.}
 \whitecard{Basis}{Schwarze.}
-\whitecard{Basis}{Schwarze.}
 \whitecard{Basis}{Schwule.}
 \whitecard{Basis}{Scientology.}
 \whitecard{Basis}{Sean Connery.}
@@ -300,13 +280,13 @@
 \whitecard{Basis}{Sido.}
 \whitecard{Basis}{Sigmar Gabriel.}
 \whitecard{Basis}{Sklaverei.}
+\whitecard{Basis}{Die Juden.}
 \whitecard{Basis}{Snobismus.}
 \whitecard{Basis}{Sonnenschein und\newline Regenbögen.}
 \whitecard{Basis}{So zu tun, als interessiere es einen.}
 \whitecard{Basis}{Spektakuläre Bauchmuskeln.}
 \whitecard{Basis}{Spießer.}
 \whitecard{Basis}{Spontane Selbstentzündung.}
-\whitecard{Basis}{Stalin.}
 \whitecard{Basis}{Star Trek.}
 \whitecard{Basis}{Sterben.}
 \whitecard{Basis}{Stille.}
@@ -332,7 +312,6 @@
 \whitecard{Basis}{Viagra\SymbReg.}
 \whitecard{Basis}{Von einem\newline Gefühl erwischt werden.}
 \whitecard{Basis}{Welpen!}
-\whitecard{Basis}{Weltfrieden.}
 \whitecard{Basis}{Wikinger.}
 \whitecard{Basis}{William Shatner.}
 \whitecard{Basis}{Winnie der Puh.}
@@ -384,7 +363,6 @@
 \blackcard{1}{Basis}{\underl:\newline Von Kindern getestet,\newline von Müttern empfohlen.}
 \blackcard{1}{Basis}{\underl. So will ich sterben!}
 \blackcard{1}{Basis}{\underl + \underl\newline = \underl.}
-\blackcard{1}{Basis}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%\blackcard{1}{Basis}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}
 \blackcard{1}{Basis}{Vielleicht wurde sie damit geboren, aber vielleicht ist es auch \underl.}
 \blackcard{1}{Basis}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, finanzierte die Mexikanische Regierung die Erforschung von \underl.}
 \blackcard{1}{Basis}{Warum bin ich so klebrig?}
