--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -2,12 +2,13 @@
 % Whitecards
 %
 
+\whitecard{Böse}{Lepra.}
+\whitecard{Böse}{In Polen einmarschieren.}
 \whitecard{Böse}{Abtreibungen\newline mit\newline Kleiderbügeln.}
 \whitecard{Böse}{AIDS.}
 \whitecard{Böse}{Auschwitz.}
 \whitecard{Böse}{Auto-\newline kannibalismus.}
 \whitecard{Böse}{Ein Fötus.}
-\whitecard{Böse}{Die Juden.}
 \whitecard{Böse}{Nekrohpilie.}
 \whitecard{Böse}{Eine Pyramide\newline aus\newline abgetrennten\newline Köpfen.}
 \whitecard{Böse}{Ein Kühlschrank voller Organe.}
