--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -5,6 +5,7 @@
 \whitecard{Drogen}{Mal so richtig\newline high werden.}
 \whitecard{Drogen}{8kg Heroin.}
 \whitecard{Drogen}{Amphetamin.}
+\whitecard{Drogen}{Kleber schnüffeln.}
 
 %
 % Blackcards
