--- a/categories/eklig.tex
+++ b/categories/eklig.tex
@@ -17,6 +17,8 @@
 \whitecard{Eklig}{Günther Jauchs weicher,\newline beschissener\newline Körper.}
 \whitecard{Eklig}{Vollgeschissene Windeln.}
 \whitecard{Eklig}{Wenn man furzt und ein bisschen mit rauskommt.}
+\whitecard{Eklig}{Einen Rülpser\newline erwarten und\newline stattdessen auf\newline den Boden\newline kotzen.}
+\whitecard{Eklig}{Ein Fotzenfurz.}
 
 %
 % Blackcards
