--- a/categories/politics.tex
+++ b/categories/politics.tex
@@ -1,8 +1,24 @@
 %
 % Whitecards
 %
+\whitecard{Politik}{Ihre Majestät,\newline Königin\newline Elizabeth II.}
+\whitecard{Politik}{Angela Merkel.}
+\whitecard{Politik}{Arbeitsplätze.}
+\whitecard{Politik}{Barack Obama.}
+\whitecard{Politik}{CDU-Wähler.}
+\whitecard{Politik}{Die priviligierte Oberklasse.}
+\whitecard{Politik}{Die Terroristen.}
+\whitecard{Politik}{Frank-Walter Steinmeier.}
+\whitecard{Politik}{Gandhi.}
+\whitecard{Politik}{George W. Bush.}
+\whitecard{Politik}{Italiener.}
+\whitecard{Politik}{Nazis.}
+\whitecard{Politik}{Stalin.}
+\whitecard{Politik}{Weltfrieden.}
 
 
 %
 % Blackcards
 %
+
+\blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%\blackcard{1}{Politik}{Es ist eine Schande, das Kinder heutzutage alle mit \underl in Berührung kommen.}
